--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ footer{
     text-align: center;
     padding-top: 30px;
 }
-.toolbars font{
+.toolbars .forText{
     text-align: center;
     text-decoration: none;
     color:  #d54346;
